= ruby_odata Change Log

=== 0.0.1 
* New Features
  * Basic CRUD Operations
  * Query Enhancement: Filters
  * Query Enhancement: Expands

=== 0.0.2
* New Features
  * Query Enhancement: Order By (both desc and asc)

=== 0.0.3
* Bug Fixes
  * Rearranged code to match the gem name.  Things were mismatched between odata_ruby and ruby_odata.

=== 0.0.4
* New Features
  * Query Enhancement: skip
  * Query Enhancement: top
  * Ability to perform paging using skip and top together
  * Updated README with examples for order_by, skip, and top
  
=== 0.0.5
* Bug Fixes
  * Works with Ruby 1.9.1
  * Works with ActiveSupport 3.0.0.beta4
  
=== 0.0.6
* New Features
  * Ability to batch saves (Adds, Updates, Deletes); this will help save on network chatter

=== 0.0.7
* New Features
  * Complex Types are now supported